edit, delete record

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input class="input" id="name-input" type="text" name="name" required>
             <div class="label">Email</div>
             <input class="input" id="email-input" name="email" required></input>
-            <button type="submit" class="form-btn">Submit</button>
+            <button type="submit" class="form-btn" id="form-btn">Submit</button>
         </form>
 
 
@@ -51,7 +51,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <!-- <tr>
                             <td>name</td>
                             <td>email.com</td>
                             <td><span class="act-btn edit-btn">Edit</span><span class="act-btn delete">Delete</span></td>
@@ -70,7 +70,7 @@
                             <td>name4</td>
                             <td>email.com4</td>
                             <td><span class="act-btn edit-btn">Edit</span><span class="act-btn delete">Delete</span></td>
-                        </tr>
+                        </tr> -->
                     </tbody>
                 </table>
             </div>
